--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+@media (min-width: 600px) {
+    header {
+      padding: 0 3rem 0 3rem;
+    }
+  }
+
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 90px 20px 0;
